--- a/docs/feui/guide/component/address.html
+++ b/docs/feui/guide/component/address.html
@@ -336,7 +336,7 @@
     
     
     <li>
-      <a href="/docs/feui/guide/component/address.html" class="sidebar-link current new">Address 地址栏</a>
+      <a href="/docs/feui/guide/component/address.html" class="sidebar-link current">Address 地址栏</a>
     </li>
   
     
@@ -350,7 +350,7 @@
     
     
     <li>
-      <a href="/docs/feui/guide/component/cell.html" class="sidebar-link">Cell</a>
+      <a href="/docs/feui/guide/component/cell.html" class="sidebar-link new">Cell</a>
     </li>
   
     
