:baby_bottle: edit iconfont

--- a/docs/feui/guide/component/forms.html
+++ b/docs/feui/guide/component/forms.html
@@ -336,7 +336,7 @@
     
     
     <li>
-      <a href="/docs/feui/guide/component/address.html" class="sidebar-link">Address 地址栏</a>
+      <a href="/docs/feui/guide/component/address.html" class="sidebar-link new">Address 地址栏</a>
     </li>
   
     
@@ -350,7 +350,7 @@
     
     
     <li>
-      <a href="/docs/feui/guide/component/cell.html" class="sidebar-link new">Cell</a>
+      <a href="/docs/feui/guide/component/cell.html" class="sidebar-link">Cell</a>
     </li>
   
     
@@ -415,7 +415,7 @@
     <div id='pContent'>
       <h3 id="书写规则"><a href="#书写规则" class="headerlink" title="书写规则"></a>书写规则</h3><p>所有文档严格按照<strong>markdown</strong>书写格式规则，不允许出现<code>html</code>或者内联<code>css</code>样式。</p>
 <h3 id="标题"><a href="#标题" class="headerlink" title="标题"></a>标题</h3><p>所有标题从三级标题开始，若要表现层级以此类推，不允许出现一级二级标题。</p>
-<h3 id="栗子"><a href="#栗子" class="headerlink" title="栗子"></a>栗子</h3><figure class="highlight md"><table><tr><td class="code"><pre><span class="line">---</span><br><span class="line">title: Button 按钮</span><br><span class="line">type: guide</span><br><span class="line">order: 411</span><br><span class="line">---</span><br><span class="line"><span class="section">### Demo</span></span><br><span class="line">[<span class="string">Live Demo&gt;&gt;</span>](<span class="link">https://feui.gitee.io/#/button</span>)</span><br><span class="line"></span><br><span class="line"><span class="section">### 使用指南</span></span><br><span class="line">  [占位...]</span><br><span class="line"><span class="section">### 代码演示</span></span><br><span class="line">  [占位...]</span><br><span class="line"><span class="section">### API</span></span><br><span class="line">  [占位...]</span><br></pre></td></tr></table></figure>
+<h3 id="栗子"><a href="#栗子" class="headerlink" title="栗子"></a>栗子</h3><figure class="highlight md"><table><tr><td class="code"><pre><div class="line">---</div><div class="line">title: Button 按钮</div><div class="line">type: guide</div><div class="line">order: 411</div><div class="line">---</div><div class="line"><span class="section">### Demo</span></div><div class="line">[<span class="string">Live Demo&gt;&gt;</span>](<span class="link">https://feui.gitee.io/#/button</span>)</div><div class="line"></div><div class="line"><span class="section">### 使用指南</span></div><div class="line">  [占位...]</div><div class="line"><span class="section">### 代码演示</span></div><div class="line">  [占位...]</div><div class="line"><span class="section">### API</span></div><div class="line">  [占位...]</div></pre></td></tr></table></figure>
     </div>
     
       <div class="guide-links">
