--- a/docs/feui/guide/component/icon.html
+++ b/docs/feui/guide/component/icon.html
@@ -336,7 +336,7 @@
     
     
     <li>
-      <a href="/docs/feui/guide/component/address.html" class="sidebar-link">Address 地址栏</a>
+      <a href="/docs/feui/guide/component/address.html" class="sidebar-link new">Address 地址栏</a>
     </li>
   
     
@@ -350,7 +350,7 @@
     
     
     <li>
-      <a href="/docs/feui/guide/component/cell.html" class="sidebar-link new">Cell</a>
+      <a href="/docs/feui/guide/component/cell.html" class="sidebar-link">Cell</a>
     </li>
   
     
@@ -414,9 +414,9 @@
     
     <div id='pContent'>
       <p><a href="https://feui.gitee.io/#/icons">Live Demo&gt;&gt;</a></p>
-<h3 id="使用指南"><a href="#使用指南" class="headerlink" title="使用指南"></a>使用指南</h3><figure class="highlight javascript"><table><tr><td class="code"><pre><span class="line"><span class="keyword">import</span> &#123; Icons &#125; <span class="keyword">from</span> <span class="string">'feui'</span>;</span><br><span class="line"></span><br><span class="line">components: &#123;</span><br><span class="line">  [Icons.name]: Icons</span><br><span class="line">&#125;</span><br></pre></td></tr></table></figure>
-<h3 id="代码演示"><a href="#代码演示" class="headerlink" title="代码演示"></a>代码演示</h3><h4 id="基础用法"><a href="#基础用法" class="headerlink" title="基础用法"></a>基础用法</h4><figure class="highlight html"><table><tr><td class="code"><pre><span class="line"><span class="tag">&lt;<span class="name">fe-icons</span> <span class="attr">:type</span>=<span class="string">"success"</span>&gt;</span><span class="tag">&lt;/<span class="name">fe-icons</span>&gt;</span></span><br></pre></td></tr></table></figure>
-<h4 id="可用图标"><a href="#可用图标" class="headerlink" title="可用图标"></a>可用图标</h4><figure class="highlight html"><table><tr><td class="code"><pre><span class="line">'infocircle',</span><br><span class="line">'icon',</span><br><span class="line">'success',</span><br><span class="line">'icon-info',</span><br><span class="line">'safesuccess',</span><br><span class="line">'fail',</span><br><span class="line">'scan',</span><br><span class="line">'search',</span><br><span class="line">'qrcode',</span><br><span class="line">'loading',</span><br><span class="line">'success-no-circle2',</span><br><span class="line">'success-circle',</span><br><span class="line">'map',</span><br><span class="line">'iconall143',</span><br><span class="line">'cancel',</span><br><span class="line">'Back',</span><br><span class="line">'icons',</span><br><span class="line">'step',</span><br><span class="line">'star',</span><br><span class="line">'seting',</span><br><span class="line">'prev',</span><br><span class="line">'next',</span><br><span class="line">'left',</span><br><span class="line">'right',</span><br><span class="line">'top',</span><br><span class="line">'bottom',</span><br><span class="line">'delect',</span><br><span class="line">'warn',</span><br><span class="line">'clear',</span><br><span class="line">'circle',</span><br><span class="line">'success-no-circle',</span><br><span class="line">'waiting',</span><br><span class="line">'upload-demo',</span><br><span class="line">'feui',</span><br><span class="line">'fy'</span><br></pre></td></tr></table></figure>
+<h3 id="使用指南"><a href="#使用指南" class="headerlink" title="使用指南"></a>使用指南</h3><figure class="highlight javascript"><table><tr><td class="code"><pre><div class="line"><span class="keyword">import</span> &#123; Icons &#125; <span class="keyword">from</span> <span class="string">'feui'</span>;</div><div class="line"></div><div class="line">components: &#123;</div><div class="line">  [Icons.name]: Icons</div><div class="line">&#125;</div></pre></td></tr></table></figure>
+<h3 id="代码演示"><a href="#代码演示" class="headerlink" title="代码演示"></a>代码演示</h3><h4 id="基础用法"><a href="#基础用法" class="headerlink" title="基础用法"></a>基础用法</h4><figure class="highlight html"><table><tr><td class="code"><pre><div class="line"><span class="tag">&lt;<span class="name">fe-icons</span> <span class="attr">:type</span>=<span class="string">"success"</span>&gt;</span><span class="tag">&lt;/<span class="name">fe-icons</span>&gt;</span></div></pre></td></tr></table></figure>
+<h4 id="可用图标"><a href="#可用图标" class="headerlink" title="可用图标"></a>可用图标</h4><figure class="highlight html"><table><tr><td class="code"><pre><div class="line">'icon',</div><div class="line">'success',</div><div class="line">'safesuccess',</div><div class="line">'fail',</div><div class="line">'scan',</div><div class="line">'search',</div><div class="line">'qrcode',</div><div class="line">'loading',</div><div class="line">'success-no-circle2',</div><div class="line">'success-circle',</div><div class="line">'map',</div><div class="line">'waiting-fail',</div><div class="line">'cancel',</div><div class="line">'back',</div><div class="line">'info',</div><div class="line">'icons',</div><div class="line">'step',</div><div class="line">'star',</div><div class="line">'seting',</div><div class="line">'jia',</div><div class="line">'jian',</div><div class="line">'prev',</div><div class="line">'next',</div><div class="line">'left',</div><div class="line">'right',</div><div class="line">'top',</div><div class="line">'bottom',</div><div class="line">'delect',</div><div class="line">'warn',</div><div class="line">'clear',</div><div class="line">'circle',</div><div class="line">'success-no-circle',</div><div class="line">'waiting',</div><div class="line">'upload-demo',</div><div class="line">'feui',</div><div class="line">'fy',</div></pre></td></tr></table></figure>
 <h3 id="API"><a href="#API" class="headerlink" title="API"></a>API</h3><table>
 <thead>
 <tr>
