--- a/docs/feui/guide/component/actionsheet.html
+++ b/docs/feui/guide/component/actionsheet.html
@@ -336,7 +336,7 @@
     
     
     <li>
-      <a href="/docs/feui/guide/component/address.html" class="sidebar-link">Address 地址栏</a>
+      <a href="/docs/feui/guide/component/address.html" class="sidebar-link new">Address 地址栏</a>
     </li>
   
     
@@ -350,7 +350,7 @@
     
     
     <li>
-      <a href="/docs/feui/guide/component/cell.html" class="sidebar-link new">Cell</a>
+      <a href="/docs/feui/guide/component/cell.html" class="sidebar-link">Cell</a>
     </li>
   
     
@@ -414,8 +414,8 @@
     
     <div id='pContent'>
       <p><a href="https://feui.gitee.io/#/actionsheet">Live Demo&gt;&gt;</a></p>
-<h3 id="使用指南"><a href="#使用指南" class="headerlink" title="使用指南"></a>使用指南</h3><figure class="highlight javascript"><table><tr><td class="code"><pre><span class="line"><span class="keyword">import</span> &#123; Actionsheet &#125; <span class="keyword">from</span> <span class="string">'feui'</span>;</span><br><span class="line"></span><br><span class="line">components: &#123;</span><br><span class="line">  [Actionsheet.name]: Actionsheet</span><br><span class="line">&#125;</span><br></pre></td></tr></table></figure>
-<h3 id="代码演示"><a href="#代码演示" class="headerlink" title="代码演示"></a>代码演示</h3><h4 id="基础用法"><a href="#基础用法" class="headerlink" title="基础用法"></a>基础用法</h4><figure class="highlight html"><table><tr><td class="code"><pre><span class="line"><span class="tag">&lt;<span class="name">fe-actionsheet</span> &gt;</span><span class="tag">&lt;/<span class="name">fe-actionsheet</span>&gt;</span></span><br></pre></td></tr></table></figure>
+<h3 id="使用指南"><a href="#使用指南" class="headerlink" title="使用指南"></a>使用指南</h3><figure class="highlight javascript"><table><tr><td class="code"><pre><div class="line"><span class="keyword">import</span> &#123; Actionsheet &#125; <span class="keyword">from</span> <span class="string">'feui'</span>;</div><div class="line"></div><div class="line">components: &#123;</div><div class="line">  [Actionsheet.name]: Actionsheet</div><div class="line">&#125;</div></pre></td></tr></table></figure>
+<h3 id="代码演示"><a href="#代码演示" class="headerlink" title="代码演示"></a>代码演示</h3><h4 id="基础用法"><a href="#基础用法" class="headerlink" title="基础用法"></a>基础用法</h4><figure class="highlight html"><table><tr><td class="code"><pre><div class="line"><span class="tag">&lt;<span class="name">fe-actionsheet</span> &gt;</span><span class="tag">&lt;/<span class="name">fe-actionsheet</span>&gt;</span></div></pre></td></tr></table></figure>
 <h3 id="API"><a href="#API" class="headerlink" title="API"></a>API</h3><table>
 <thead>
 <tr>
