--- a/docs/feui/guide/component/qrcode.html
+++ b/docs/feui/guide/component/qrcode.html
@@ -336,7 +336,7 @@
     
     
     <li>
-      <a href="/docs/feui/guide/component/address.html" class="sidebar-link">Address 地址栏</a>
+      <a href="/docs/feui/guide/component/address.html" class="sidebar-link new">Address 地址栏</a>
     </li>
   
     
@@ -350,7 +350,7 @@
     
     
     <li>
-      <a href="/docs/feui/guide/component/cell.html" class="sidebar-link new">Cell</a>
+      <a href="/docs/feui/guide/component/cell.html" class="sidebar-link">Cell</a>
     </li>
   
     
@@ -414,12 +414,12 @@
     
     <div id='pContent'>
       <h1 id="组件还没写"><a href="#组件还没写" class="headerlink" title="组件还没写"></a>组件还没写</h1><p><a href="https://feui.gitee.io/#/qrcode">Live Demo&gt;&gt;</a></p>
-<h3 id="使用指南"><a href="#使用指南" class="headerlink" title="使用指南"></a>使用指南</h3><figure class="highlight javascript"><table><tr><td class="code"><pre><span class="line"><span class="keyword">import</span> &#123; Qrcode &#125; <span class="keyword">from</span> <span class="string">'feui'</span>;</span><br><span class="line"></span><br><span class="line">components: &#123;</span><br><span class="line">  [Qrcode.name]: Qrcode</span><br><span class="line">&#125;</span><br></pre></td></tr></table></figure>
-<h3 id="代码演示"><a href="#代码演示" class="headerlink" title="代码演示"></a>代码演示</h3><h4 id="基础用法"><a href="#基础用法" class="headerlink" title="基础用法"></a>基础用法</h4><figure class="highlight html"><table><tr><td class="code"><pre><span class="line"><span class="tag">&lt;<span class="name">fe-qrcode</span> <span class="attr">value</span>=<span class="string">"https://feui.gitee.io"</span>&gt;</span><span class="tag">&lt;/<span class="name">fe-qrcode</span>&gt;</span></span><br></pre></td></tr></table></figure>
-<h4 id="二维码尺寸-200px"><a href="#二维码尺寸-200px" class="headerlink" title="二维码尺寸 200px"></a>二维码尺寸 200px</h4><figure class="highlight html"><table><tr><td class="code"><pre><span class="line"><span class="tag">&lt;<span class="name">fe-qrcode</span> <span class="attr">value</span>=<span class="string">"https://feui.gitee.io"</span> <span class="attr">size</span>=<span class="string">"200"</span>&gt;</span><span class="tag">&lt;/<span class="name">fe-qrcode</span>&gt;</span></span><br></pre></td></tr></table></figure>
-<h4 id="canvas类型"><a href="#canvas类型" class="headerlink" title="canvas类型"></a>canvas类型</h4><figure class="highlight html"><table><tr><td class="code"><pre><span class="line"><span class="tag">&lt;<span class="name">fe-qrcode</span> <span class="attr">value</span>=<span class="string">"https://feui.gitee.io"</span> <span class="attr">type</span>=<span class="string">"canvas"</span>&gt;</span><span class="tag">&lt;/<span class="name">fe-qrcode</span>&gt;</span></span><br></pre></td></tr></table></figure>
-<h4 id="二维码颜色-红色"><a href="#二维码颜色-红色" class="headerlink" title="二维码颜色 红色"></a>二维码颜色 红色</h4><figure class="highlight html"><table><tr><td class="code"><pre><span class="line"><span class="tag">&lt;<span class="name">fe-qrcode</span> <span class="attr">value</span>=<span class="string">"https://feui.gitee.io"</span> <span class="attr">fg-color</span>=<span class="string">"#ff0000"</span>&gt;</span><span class="tag">&lt;/<span class="name">fe-qrcode</span>&gt;</span></span><br></pre></td></tr></table></figure>
-<h4 id="二维码背景颜色-灰色"><a href="#二维码背景颜色-灰色" class="headerlink" title="二维码背景颜色 灰色"></a>二维码背景颜色 灰色</h4><figure class="highlight html"><table><tr><td class="code"><pre><span class="line"><span class="tag">&lt;<span class="name">fe-qrcode</span> <span class="attr">value</span>=<span class="string">"https://feui.gitee.io"</span> <span class="attr">fg-color</span>=<span class="string">"#cccccc"</span>&gt;</span><span class="tag">&lt;/<span class="name">fe-qrcode</span>&gt;</span></span><br></pre></td></tr></table></figure>
+<h3 id="使用指南"><a href="#使用指南" class="headerlink" title="使用指南"></a>使用指南</h3><figure class="highlight javascript"><table><tr><td class="code"><pre><div class="line"><span class="keyword">import</span> &#123; Qrcode &#125; <span class="keyword">from</span> <span class="string">'feui'</span>;</div><div class="line"></div><div class="line">components: &#123;</div><div class="line">  [Qrcode.name]: Qrcode</div><div class="line">&#125;</div></pre></td></tr></table></figure>
+<h3 id="代码演示"><a href="#代码演示" class="headerlink" title="代码演示"></a>代码演示</h3><h4 id="基础用法"><a href="#基础用法" class="headerlink" title="基础用法"></a>基础用法</h4><figure class="highlight html"><table><tr><td class="code"><pre><div class="line"><span class="tag">&lt;<span class="name">fe-qrcode</span> <span class="attr">value</span>=<span class="string">"https://feui.gitee.io"</span>&gt;</span><span class="tag">&lt;/<span class="name">fe-qrcode</span>&gt;</span></div></pre></td></tr></table></figure>
+<h4 id="二维码尺寸-200px"><a href="#二维码尺寸-200px" class="headerlink" title="二维码尺寸 200px"></a>二维码尺寸 200px</h4><figure class="highlight html"><table><tr><td class="code"><pre><div class="line"><span class="tag">&lt;<span class="name">fe-qrcode</span> <span class="attr">value</span>=<span class="string">"https://feui.gitee.io"</span> <span class="attr">size</span>=<span class="string">"200"</span>&gt;</span><span class="tag">&lt;/<span class="name">fe-qrcode</span>&gt;</span></div></pre></td></tr></table></figure>
+<h4 id="canvas类型"><a href="#canvas类型" class="headerlink" title="canvas类型"></a>canvas类型</h4><figure class="highlight html"><table><tr><td class="code"><pre><div class="line"><span class="tag">&lt;<span class="name">fe-qrcode</span> <span class="attr">value</span>=<span class="string">"https://feui.gitee.io"</span> <span class="attr">type</span>=<span class="string">"canvas"</span>&gt;</span><span class="tag">&lt;/<span class="name">fe-qrcode</span>&gt;</span></div></pre></td></tr></table></figure>
+<h4 id="二维码颜色-红色"><a href="#二维码颜色-红色" class="headerlink" title="二维码颜色 红色"></a>二维码颜色 红色</h4><figure class="highlight html"><table><tr><td class="code"><pre><div class="line"><span class="tag">&lt;<span class="name">fe-qrcode</span> <span class="attr">value</span>=<span class="string">"https://feui.gitee.io"</span> <span class="attr">fg-color</span>=<span class="string">"#ff0000"</span>&gt;</span><span class="tag">&lt;/<span class="name">fe-qrcode</span>&gt;</span></div></pre></td></tr></table></figure>
+<h4 id="二维码背景颜色-灰色"><a href="#二维码背景颜色-灰色" class="headerlink" title="二维码背景颜色 灰色"></a>二维码背景颜色 灰色</h4><figure class="highlight html"><table><tr><td class="code"><pre><div class="line"><span class="tag">&lt;<span class="name">fe-qrcode</span> <span class="attr">value</span>=<span class="string">"https://feui.gitee.io"</span> <span class="attr">fg-color</span>=<span class="string">"#cccccc"</span>&gt;</span><span class="tag">&lt;/<span class="name">fe-qrcode</span>&gt;</span></div></pre></td></tr></table></figure>
 <h3 id="API"><a href="#API" class="headerlink" title="API"></a>API</h3><table>
 <thead>
 <tr>
