:baby_bottle: edit demo

--- a/docs/feui/guide/component/cell.html
+++ b/docs/feui/guide/component/cell.html
@@ -2,7 +2,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <title>Cell — Feui</title>
+    <title>Cell 单元格 — Feui</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
     <link rel="icon" href="/docs/images/favicon.ico" type="image/x-icon">
@@ -336,7 +336,7 @@
     
     
     <li>
-      <a href="/docs/feui/guide/component/address.html" class="sidebar-link new">Address 地址栏</a>
+      <a href="/docs/feui/guide/component/address.html" class="sidebar-link">Address 地址栏</a>
     </li>
   
     
@@ -350,7 +350,21 @@
     
     
     <li>
-      <a href="/docs/feui/guide/component/cell.html" class="sidebar-link current">Cell</a>
+      <a href="/docs/feui/guide/component/cell.html" class="sidebar-link current">Cell 单元格</a>
+    </li>
+  
+    
+    
+      
+      
+      
+      
+      
+      
+    
+    
+    <li>
+      <a href="/docs/feui/guide/component/checkicon.html" class="sidebar-link new">Checkicon 单选按钮</a>
     </li>
   
     
@@ -410,7 +424,7 @@
 <div  id='content' class="content guide with-sidebar cell-guide">
   <div class='content_box'>
     
-      <h1>Cell</h1>
+      <h1>Cell 单元格</h1>
     
     <div id='pContent'>
       <p><a href="https://feui.gitee.io/#/cell">Live Demo&gt;&gt;</a></p>
@@ -570,6 +584,8 @@
         
           <span>← <a href="/docs/feui/guide/component/address.html">Address 地址栏</a></span>
         
+        
+          <span style="float: right;"><a href="/docs/feui/guide/component/checkicon.html">Checkicon 单选按钮</a> →</span>
         
       </div>
     
