--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -291,6 +291,7 @@ a {
     color: #7f8c8d;
     display: block;
     padding: 0.5em 2.5em;
+    transition: 0.2s;
 }
 
 .sidebar .sidebar-link.current {
