--- a/docs/feui/guide/component/address.html
+++ b/docs/feui/guide/component/address.html
@@ -336,7 +336,7 @@
     
     
     <li>
-      <a href="/docs/feui/guide/component/address.html" class="sidebar-link current new">Address 地址栏</a>
+      <a href="/docs/feui/guide/component/address.html" class="sidebar-link current">Address 地址栏</a>
     </li>
   
     
@@ -350,7 +350,21 @@
     
     
     <li>
-      <a href="/docs/feui/guide/component/cell.html" class="sidebar-link">Cell</a>
+      <a href="/docs/feui/guide/component/cell.html" class="sidebar-link">Cell 单元格</a>
+    </li>
+  
+    
+    
+      
+      
+      
+      
+      
+      
+    
+    
+    <li>
+      <a href="/docs/feui/guide/component/checkicon.html" class="sidebar-link new">Checkicon 单选按钮</a>
     </li>
   
     
@@ -553,7 +567,7 @@
       <div class="guide-links">
         
         
-          <span style="float: right;"><a href="/docs/feui/guide/component/cell.html">Cell</a> →</span>
+          <span style="float: right;"><a href="/docs/feui/guide/component/cell.html">Cell 单元格</a> →</span>
         
       </div>
     
