:baby_bottle: edit md

--- a/docs/feui/guide/component/checklist.html
+++ b/docs/feui/guide/component/checklist.html
@@ -378,7 +378,21 @@
     
     
     <li>
-      <a href="/docs/feui/guide/component/checklist.html" class="sidebar-link current new">Checklist 按钮组</a>
+      <a href="/docs/feui/guide/component/checklist.html" class="sidebar-link current">Checklist 按钮组</a>
+    </li>
+  
+    
+    
+      
+      
+      
+      
+      
+      
+    
+    
+    <li>
+      <a href="/docs/feui/guide/component/countup.html" class="sidebar-link new">Countup 数字滚动</a>
     </li>
   
     
@@ -582,6 +596,8 @@
         
           <span>← <a href="/docs/feui/guide/component/checkicon.html">Checkicon 单选按钮</a></span>
         
+        
+          <span style="float: right;"><a href="/docs/feui/guide/component/countup.html">Countup 数字滚动</a> →</span>
         
       </div>
     
