--- a/docs/feui/guide/component/input.html
+++ b/docs/feui/guide/component/input.html
@@ -378,7 +378,21 @@
     
     
     <li>
-      <a href="/docs/feui/guide/component/checklist.html" class="sidebar-link new">Checklist 按钮组</a>
+      <a href="/docs/feui/guide/component/checklist.html" class="sidebar-link">Checklist 按钮组</a>
+    </li>
+  
+    
+    
+      
+      
+      
+      
+      
+      
+    
+    
+    <li>
+      <a href="/docs/feui/guide/component/countup.html" class="sidebar-link new">Countup 数字滚动</a>
     </li>
   
     
@@ -446,6 +460,8 @@
     </div>
     
       <div class="guide-links">
+        
+          <span>← <a href="/docs/feui/guide/component/countup.html">Countup 数字滚动</a></span>
         
         
       </div>
