--- a/docs/feui/guide/component/component.html
+++ b/docs/feui/guide/component/component.html
@@ -598,9 +598,33 @@
 <tr>
 <td style="text-align:center">451</td>
 <td style="text-align:center">Cell</td>
-<td style="text-align:center">-</td>
+<td style="text-align:center">单元格</td>
 <td style="text-align:left"><a href="https://feui.gitee.io/docs/feui/guide/component/cell.html">https://feui.gitee.io/docs/feui/guide/component/cell.html</a></td>
 <td style="text-align:left"><a href="https://feui.gitee.io/#/cell">https://feui.gitee.io/#/cell</a></td>
+<td style="text-align:center">-</td>
+</tr>
+<tr>
+<td style="text-align:center">452</td>
+<td style="text-align:center">Checkicon</td>
+<td style="text-align:center">单选按钮</td>
+<td style="text-align:left"><a href="https://feui.gitee.io/docs/feui/guide/component/checkicon.html">https://feui.gitee.io/docs/feui/guide/component/checkicon.html</a></td>
+<td style="text-align:left"><a href="https://feui.gitee.io/#/checkicon">https://feui.gitee.io/#/checkicon</a></td>
+<td style="text-align:center">-</td>
+</tr>
+<tr>
+<td style="text-align:center">453</td>
+<td style="text-align:center">Checklist</td>
+<td style="text-align:center">按钮组</td>
+<td style="text-align:left"><a href="https://feui.gitee.io/docs/feui/guide/component/checklist.html">https://feui.gitee.io/docs/feui/guide/component/checklist.html</a></td>
+<td style="text-align:left"><a href="https://feui.gitee.io/#/checklist">https://feui.gitee.io/#/checklist</a></td>
+<td style="text-align:center">-</td>
+</tr>
+<tr>
+<td style="text-align:center">454</td>
+<td style="text-align:center">Countup</td>
+<td style="text-align:center">数字滚动</td>
+<td style="text-align:left"><a href="https://feui.gitee.io/docs/feui/guide/component/countup.html">https://feui.gitee.io/docs/feui/guide/component/countup.html</a></td>
+<td style="text-align:left"><a href="https://feui.gitee.io/#/countup">https://feui.gitee.io/#/countup</a></td>
 <td style="text-align:center">-</td>
 </tr>
 <tr>
