:baby_bottle: add flexbox

--- a/docs/feui/guide/component/countup.html
+++ b/docs/feui/guide/component/countup.html
@@ -392,7 +392,21 @@
     
     
     <li>
-      <a href="/docs/feui/guide/component/countup.html" class="sidebar-link current new">Countup 数字滚动</a>
+      <a href="/docs/feui/guide/component/countup.html" class="sidebar-link current">Countup 数字滚动</a>
+    </li>
+  
+    
+    
+      
+      
+      
+      
+      
+      
+    
+    
+    <li>
+      <a href="/docs/feui/guide/component/flexbox.html" class="sidebar-link new">Flexbox 弹性布局</a>
     </li>
   
     
@@ -600,6 +614,8 @@
         
           <span>← <a href="/docs/feui/guide/component/checklist.html">Checklist 按钮组</a></span>
         
+        
+          <span style="float: right;"><a href="/docs/feui/guide/component/flexbox.html">Flexbox 弹性布局</a> →</span>
         
       </div>
     
